force-app/main/default/objects/Ride__c/Ride__c.object-meta.xml
<CustomObject>
    <label>Ride</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Ride id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ride</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>