force-app/main/default/objects/Ride__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Booking_Customer__c</referenceTo>
    <relationshipLabel>Ride</relationshipLabel>
    <relationshipName>Ride</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>