force-app/main/default/objects/Ride__c/fields/Drop__c.field-meta.xml
<CustomField>
    <fullName>Drop__c</fullName>
    <label>Drop</label>
    <type>TextArea</type>
</CustomField>