force-app/main/default/objects/Ride__c/fields/Fare__c.field-meta.xml
<CustomField>
    <fullName>Fare__c</fullName>
    <label>Fare</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>